<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/tweet_margin_vertical"
    android:layout_marginTop="@dimen/tweet_margin_vertical"
    android:orientation="horizontal"
    android:paddingRight="@dimen/tweet_profile_image_margin">

    <ImageView
        android:id="@+id/iv_profile_image"
        android:layout_width="@dimen/tweet_profile_image_width"
        android:layout_height="@dimen/tweet_profile_image_height"
        android:layout_marginLeft="@dimen/tweet_profile_image_margin"
        android:layout_marginRight="@dimen/tweet_profile_image_margin"
        tools:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name"
                style="@style/tweet_small_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_tweet_profile_name"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_screen_name"
                style="@style/tweet_small_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_tweet_profile_id" />

            <TextView
                style="@style/tweet_small_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:text="@string/tweet_middle"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_tweet_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_tweet_time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/tweet_margin_vertical">

            <TextView
                android:id="@+id/tv_tweet_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tweet_margin_vertical"
                android:textColor="@android:color/black"
                tools:text="@string/sample_tweet" />

            <ImageView
                android:id="@+id/iv_tweet_image"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:src="@drawable/twitter_sample_image" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/tweet_icon_size"
                android:layout_height="@dimen/tweet_icon_size"
                android:src="@drawable/ic_comment_primary_dark" />

            <TextView
                style="@style/tweet_action_style"
                tools:text="2" />

            <ImageView
                android:layout_width="@dimen/tweet_icon_size"
                android:layout_height="@dimen/tweet_icon_size"
                android:src="@drawable/ic_retweet_primary_dark" />

            <TextView
                android:id="@+id/tv_retweets"
                style="@style/tweet_action_style"
                tools:text="2" />

            <ImageView
                android:layout_width="@dimen/tweet_icon_size"
                android:layout_height="@dimen/tweet_icon_size"
                android:src="@drawable/ic_like_primary_dark" />

            <TextView
                android:id="@+id/tv_fav"
                style="@style/tweet_action_style"
                tools:text="12" />

            <ImageView
                android:layout_width="@dimen/tweet_icon_size"
                android:layout_height="@dimen/tweet_icon_size"
                android:src="@drawable/ic_direct_message_action" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>